Reestructuración y cambio de funciones

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "proyecto"
+        "Escuchando",
+        "estilo",
+        "Jhony",
+        "proyecto",
+        "siglo"
     ]
 }
