Módulos de testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Escuchando",
         "estilo",
         "Jhony",
+        "productos",
         "proyecto",
         "siglo",
         "titulo"
