--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
     "commander": "^10.0.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -47,6 +48,7 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "react-bootstrap": "^2.9.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.5.4",
     "stripe": "^12.10.0",
